# modern-data-platform

./: .gitignore  Makefile  README.md  pyproject.toml  schema.json
airflow/: .airflowignore  .dockerignore  README.md
airflow/config/: airflow.cfg  bootstrap.py  config.yaml  pools.json  terraform_outputs.json
airflow/config/bootstrap/: airflow.py  bootstrap.py  config.py  terraform.py
airflow/dags/foundation/: branch_validation.py  platform_validation.py  retry_validation.py
docs/architecture/: ADR-000-architecture-principles.md  ADR-001-platform-architecture.md  ADR-002-platform-contracts.md  ADR-003-cloud-strategy.md  ADR-004-repository-structure.md  ADR-005-development-standards.md  ADR-006-platform-capability-model.md  ADR-007 Workflow Capability.  architecture.md  project-decisions.md
infrastructure/databricks/: bronze_job.yml  databricks.yml  full_pipeline.yml  gold_job.yml  silver_job.yml  variables.yml
infrastructure/databricks/targets/: prod.yml
infrastructure/docker/: docker-compose.yml
infrastructure/docker/debezium/: Dockerfile  README.md
infrastructure/terraform/bootstrap/: backend.tf  locals.tf  main.tf  outputs.tf  variables.tf
notebooks/bronze/: ingest_sources.ipynb  optimize_bronze.ipynb  validate_bronze.ipynb
notebooks/gold/: publish_gold.ipynb
notebooks/notebooks/common/: readers.py
notebooks/silver/: transform_silver.ipynb  transformations.py
scripts/: export-terraform-outputs.sh
src/common/: constants.py  logger.py  utils.py  writers.py
src/data_platform/: bootstrap.py  platform.py
src/data_platform/catalog/: __init__.py  catalog_provider.py  config.py  exceptions.py
src/data_platform/config/: settings.py
src/data_platform/contracts/: base_provider.py  compute_provider.py
src/data_platform/exceptions/: capability_error.py  configuration_error.py  platform_exception.py  provider_error.py
src/data_platform/http/: __init__.py  http_client.py  http_error.py  http_response.py
src/data_platform/models/: compute.py
src/data_platform/monitoring/: logger.py
src/data_platform/providers/: provider.py  provider_builder.py  (+2 more)
src/platform/: bootstrap.py  platform.py
src/providers/: __init__.py
src/simulator/: app.py  scheduler.py
(+233 files in other folders)
