[project]
name = "modern-data-platform"
version = "0.1.0"
description = "Cloud-agnostic modern data platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"

authors = [
    { name = "Aroldo Brancalhao Junior" }
]

dependencies = [
    "faker>=40.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
