[project]
name = "modern-data-platform"
version = "0.1.0"
description = "Cloud-agnostic modern data platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"

authors = [
    { name = "Aroldo Brancalhao Junior" }
]

dependencies = [
    "boto3>=1.43.52",
    "databricks-sdk>=0.122.0",
    "faker>=40.28.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "pyspark>=4.1.0",
    "mypy>=2.3.0",
    "boto3-stubs>=1.43.53",
    "mypy-boto3-s3>=1.43.50",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.ruff]
src = ["src"]

exclude = [
    ".venv",
    "build",
    "dist",
    "notebooks",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "boto3",
    "botocore",
    "botocore.*",
]
ignore_missing_imports = true